@@ -412,7 +412,7 @@ public class ApplElemAccessImplTest {
         }
     }
 
-//    @Test
+    @Test
     public void testGetInstancesExtSelectRelationAttribute() {
         try {
             ApplicationStructure as = aoSession.getApplicationStructure();
