@@ -13,6 +13,7 @@
 		- allowed DS_STRING for conditions in ApplElemAccessImpl.getInstancesExt()
 		- improved error message at existence check of select attributes of query in ApplElemAccessImpl.getInstancesExt()
 		- skipped values attribute of AoLocalColumns to be returned on ApplElemAccessImpl.getInstances() calls with attribute wildcard
+		- made m:n relations supported at ApplElemAccessImpl.updateInstances(), handled DataType DS_LONGLONG additionally to DT_LONGLONG
 
 	0.7.2 (Christian Rechner)
 		- skip parse errors in documentation section to be able to read files having invalid
